--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/runtime": "^7.15.3",
     "@typescript-eslint/eslint-plugin": "^8.27.0",
     "@typescript-eslint/parser": "^8.27.0",
+    "autoprefixer": "^10.4.21",
     "concurrently": "^6.2.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
@@ -32,6 +33,8 @@
     "husky": "^7.0.2",
     "jest": "^27.0.6",
     "jest-cli": "^27.0.6",
+    "postcss": "^8.5.3",
+    "postcss-loader": "^8.1.1",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
     "serve": "^12.0.0",
@@ -47,6 +50,7 @@
     "@types/jest": "^27.0.1",
     "@types/systemjs": "^6.1.1",
     "@types/webpack-env": "^1.16.2",
+    "primeicons": "^7.0.0",
     "single-spa": "^5.9.3",
     "single-spa-css": "^2.0.0",
     "single-spa-layout": "^1.6.1"
