--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^10.4.21",
     "concurrently": "^6.2.1",
     "cross-env": "^7.0.3",
+    "css-loader": "^7.1.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-ts-important-stuff": "^1.1.0",
@@ -37,7 +38,10 @@
     "postcss-loader": "^8.1.1",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
+    "sass": "^1.89.0",
+    "sass-loader": "^16.0.5",
     "serve": "^12.0.0",
+    "style-loader": "^4.0.0",
     "ts-config-single-spa": "^3.0.0",
     "typescript": "^4.3.5",
     "webpack": "^5.51.1",
